# cpp-calc-dz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  calculator.cpp
include/: calculate.hpp  check.hpp  parcer.hpp  printers.hpp  run.hpp
src/: calculate.cpp  check.cpp  main.cpp  parcer.cpp  printers.cpp  run.cpp
